Bug 405309 - Kamoso shows and takes photos mirrored. It has no settings to adjust this.
Summary: Kamoso shows and takes photos mirrored. It has no settings to adjust this.
Status: RESOLVED FIXED
Alias: None
Product: kamoso
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-10 13:17 UTC by Uwe Dippel
Modified: 2019-04-15 15:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Uwe Dippel 2019-03-10 13:17:31 UTC
SUMMARY


STEPS TO REPRODUCE
1. Open Komoso (on lenovo Helix 2). The rear camera displays and stores images mirrored.
2. Open Settings e.g. to set the display to 'mirrored'

OBSERVED RESULT
All streams from the rear camera are mirrored. There is no adjustments in 'Settings' for this problem. 
All pictures need to be opened with a photo processing software, mirrored, and stored.

EXPECTED RESULT
All images appear the right way; at least an option 'mirror' per camera is provided.

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: Kubuntu 18.04
(available in About System)
KDE Plasma Version: 5.12.7
KDE Frameworks Version: 5.44.0
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Aleix Pol 2019-04-08 14:22:38 UTC
Git commit 96fb988472935b5edb31faa4ffc2bf04241bdb33 by Aleix Pol.
Committed on 08/04/2019 at 14:19.
Pushed by apol into branch 'master'.

Allow to enable/disable the mirrored setting

M  +11   -0    src/kamoso.cpp
M  +5    -0    src/kamoso.h
M  +5    -1    src/kamosoSettings.kcfg
M  +0    -1    src/qml/Config.qml
M  +6    -1    src/qml/ImagesView.qml
M  +7    -0    src/qml/Main.qml
M  +18   -7    src/video/webcamcontrol.cpp
M  +11   -0    src/video/webcamcontrol.h

https://commits.kde.org/kamoso/96fb988472935b5edb31faa4ffc2bf04241bdb33
Comment 2 Nate Graham 2019-04-08 15:05:03 UTC
Thanks Aleix! However the new setting doesn't work for my camera. When I uncheck it, the video disappears and is replaced with a black screen, and the following is printed to the console:


ead property 'globalToolBarStyle' of null
error debugMessage: No file name specified for reading.
error on: "filesrc location=\"\" ! decodebin ! imagefreeze ! videoconvert ! identity name=last" "gstfilesrc.c(525): gst_file_src_start (): /GstPipeline:pipeline0/GstFileSrc:filesrc0"
error debugMessage: No file name specified for reading.
error on: "filesrc location=\"\" ! decodebin ! imagefreeze ! videoconvert ! bulge name=last" "gstfilesrc.c(525): gst_file_src_start (): /GstPipeline:pipeline1/GstFileSrc:filesrc1"
error debugMessage: Internal data stream error.
error: "gstbasesrc.c(3055): gst_base_src_loop (): /GstCameraBin:camerabin/GstWrapperCameraBinSrc:video_balance/GstV4l2Src:v4l2src:\nstreaming stopped, reason not-negotiated (-4)"

(kamoso:13922): GLib-GObject-CRITICAL **: 09:03:39.526: g_object_notify: assertion 'G_IS_OBJECT (object)' failed

(kamoso:13922): GLib-GObject-CRITICAL **: 09:03:39.526: g_object_notify: assertion 'G_IS_OBJECT (object)' failed
error debugMessage: Internal data stream error.
error: "gstbasesrc.c(3055): gst_base_src_loop (): /GstCameraBin:camerabin/GstWrapperCameraBinSrc:video_balance/GstV4l2Src:v4l2src:\nstreaming stopped, reason not-negotiated (-4)"

(kamoso:13922): GLib-GObject-CRITICAL **: 09:03:39.569: g_object_notify: assertion 'G_IS_OBJECT (object)' failed

(kamoso:13922): GLib-GObject-CRITICAL **: 09:03:39.569: g_object_notify: assertion 'G_IS_OBJECT (object)' failed

(kamoso:13922): GLib-GObject-CRITICAL **: 09:03:39.569: g_object_notify: assertion 'G_IS_OBJECT (object)' failed
error debugMessage: Internal data stream error.
error: "gstbasesrc.c(3055): gst_base_src_loop (): /GstCameraBin:camerabin/GstWrapperCameraBinSrc:video_balance/GstV4l2Src:v4l2src:\nstreaming stopped, reason not-negotiated (-4)"

(kamoso:13922): GLib-GObject-CRITICAL **: 09:03:39.616: g_object_notify: assertion 'G_IS_OBJECT (object)' failed

(kamoso:13922): GLib-GObject-CRITICAL **: 09:03:39.616: g_object_notify: assertion 'G_IS_OBJECT (object)' failed

(kamoso:13922): GLib-GObject-CRITICAL **: 09:03:39.616: g_object_notify: assertion 'G_IS_OBJECT (object)' failed

(kamoso:13922): GLib-GObject-CRITICAL **: 09:03:39.616: g_object_notify: assertion 'G_IS_OBJECT (object)' failed
error debugMessage: Internal data stream error.
error: "gstbasesrc.c(3055): gst_base_src_loop (): /GstCameraBin:camerabin/GstWrapperCameraBinSrc:video_balance/GstV4l2Src:v4l2src:\nstreaming stopped, reason not-negotiated (-4)"
Comment 3 Aleix Pol 2019-04-15 15:00:27 UTC
Git commit a7947d0e1125c07513a29d2f72510c10f50a1e9b by Aleix Pol.
Committed on 15/04/2019 at 14:57.
Pushed by apol into branch 'master'.

Properly un-mirror images

M  +1    -1    src/video/webcamcontrol.cpp

https://commits.kde.org/kamoso/a7947d0e1125c07513a29d2f72510c10f50a1e9b