Allow to enable/disable the mirrored setting

BUG: 405309